--- a/src/NDisconf.Client/NDisconf.Client.csproj
+++ b/src/NDisconf.Client/NDisconf.Client.csproj
@@ -9,8 +9,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Rules\" />
     <Folder Include="Fetchers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="NLog" Version="4.5.0-rc04" />
   </ItemGroup>
 
 </Project>
