--- a/src/NDisconf.Client/NDisconf.Client.csproj
+++ b/src/NDisconf.Client/NDisconf.Client.csproj
@@ -9,11 +9,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Fetchers\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="NLog" Version="4.5.0-rc04" />
+    <PackageReference Include="Polly" Version="5.8.0" />
   </ItemGroup>
 
 </Project>
