--- a/src/NDisconf.Client/NDisconf.Client.csproj
+++ b/src/NDisconf.Client/NDisconf.Client.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="NLog" Version="4.5.0-rc04" />
     <PackageReference Include="Polly" Version="5.8.0" />
+    <PackageReference Include="RestSharp" Version="106.2.1" />
   </ItemGroup>
 
 </Project>
