--- a/src/NDisconf.Client/NDisconf.Client.csproj
+++ b/src/NDisconf.Client/NDisconf.Client.csproj
@@ -9,6 +9,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.0.0" />
     <PackageReference Include="NLog" Version="4.5.0-rc04" />
     <PackageReference Include="Polly" Version="5.8.0" />
     <PackageReference Include="RestSharp" Version="106.2.1" />
