--- a/src/NDisconf.Client/NDisconf.Client.csproj
+++ b/src/NDisconf.Client/NDisconf.Client.csproj
@@ -1,20 +1,28 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>net45;netstandard2.0</TargetFrameworks>
+    <!--<TargetFramework>net45</TargetFramework>-->
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\NDisconf.Core\NDisconf.Core.csproj" />
   </ItemGroup>
 
-  <ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.0.0" />
+    <PackageReference Include="RestSharp" Version="106.2.1" />
+  </ItemGroup>
+  
+  <ItemGroup Condition="'$(TargetFramework)' == 'net45'">
+    <PackageReference Include="RestSharp" Version="105.2.3" />
+  </ItemGroup>
+  
+  <ItemGroup>
     <PackageReference Include="NLog" Version="4.5.0-rc04" />
     <PackageReference Include="Polly" Version="5.8.0" />
-    <PackageReference Include="RestSharp" Version="106.2.1" />
   </ItemGroup>
 
 </Project>
